Fixes #1007 - Use collections factory methods.
Now using List.of() et al. everywhere since Jackson 2.13.x supports them.

Signed-off-by: Simone Bordet <simone.bordet@gmail.com>